Successor API changes, update successor Swagger documentation
