# swagger.json
@@ -1223,7 +1223,7 @@
               "schema": {
                 "type": "array",
                 "items": {
-                  "$ref": "#/components/schemas/EdgeWrapper"
+                  "$ref": "#/components/schemas/Successor"
                 }
               }
             }
@@ -1238,7 +1238,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/EdgeWrapper"
+                    "$ref": "#/components/schemas/Successor"
                   }
                 }
               }
@@ -1272,12 +1272,6 @@
           {
             "name": "id",
             "description": "Node's unique id.",
-            "required": true,
-            "in": "path"
-          },
-          {
-            "name": "date",
-            "description": "Date for the fullname field.",
             "required": true,
             "in": "path"
           }],
@@ -1794,15 +1788,16 @@
           "id": {
             "type": "integer",
             "format": "int32",
-            "example": 9424
+            "example": 32212
           },
-          "parentUniqueId": {
-            "type": "integer",
-            "example": 69246922
+          "parentNodeId": {
+            "type": "string",
+            "example": 6770
           },
           "childUniqueId": {
             "type": "integer",
-            "example": 54835083
+            "format": "int32",
+            "example": 90111204
           },
           "startDate": {
             "type": "string",
@@ -1816,7 +1811,53 @@
           },
           "hierarchy": {
             "type": "string",
-            "example": "history"
+            "example": "henkilosto"
+          },
+          "isNew" : {
+            "type" : "boolean",
+            "example": false,
+            "description": "is new attribute"
+          },
+          "deleted" : {
+            "type" : "boolean",
+            "example": false,
+            "description": "is attribute marked for deletion"
+          }
+        }
+      },
+      "Successor": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "example": 32382,
+            "description": "edge id"
+          },
+          "parentUniqueId": {
+            "type": "integer",
+            "example": 54835083,
+            "description": "successor unique id"
+          },
+          "childUniqueId": {
+            "type": "integer",
+            "example": 69246922,
+            "description": "node id"
+          },
+          "startDate": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2023-05-04T10:45:53.145Z"
+          },
+          "endDate": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2024-05-14T10:45:53.145Z"
+          },
+          "hierarchy": {
+            "type": "string",
+            "example": "history",
+            "description": "hierarchy is always history for successors"
           },
           "isNew" : {
             "type" : "boolean",
